refactor: fjerne module-info.java og unødvendiggjort krims fra pom.xml